<resources>
    <string name="app_name">Shopik</string>
    <string name="copy_right">Copyright © 2022 Eitan Goren. All rights reserved.</string>
    <string name="facebook_app_id">555191575133910</string>
    <string name="fb_login_protocol_scheme">fb555191575133910</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">2578292a9bb4ac35fe1a3427f11f842f</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">555191575133910</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb555191575133910</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="title_activity_shopik_application">ShopikApplicationActivity</string>
    <string name="loading">Loading…</string>
    <string name="hot_trending">Users\' Choice </string>
    <string name="click">click</string>
    <string name="logo">logo</string>
    <string name="sub_category_image">sub_category_image</string>
    <string name="category_name">Category name</string>
    <string name="image_slider">image_slider</string>
    <string name="shop">SHOP</string>
    <string name="categories">categories</string>
    <string name="new_in">Newest Items</string>
    <string name="favorite">favorite</string>
    <string name="dot">dot</string>
    <string name="image_item">image_item</string>
    <string name="your_info">Your Info</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="contact">Tell Me What You Think</string>
    <string name="visit_me">Visit Me</string>
    <string name="heart">heart</string>
    <string name="_0">0</string>
    <string name="sale">ON SALE!</string>
    <string name="signin_with_google">Google Sign-in</string>
    <string name="signin_with_facebook">Facebook Sign-in</string>
    <string name="signin_with_email">Email Sign-in</string>
    <string name="close">close</string>
    <string name="like">like</string>
    <string name="about_us">Who we are</string>
    <string name="nav_drawer_bg">bg</string>
    <string name="go_to_store">Go to store</string>
    <string name="seller_info">Seller info</string>
    <string name="fullscreen_button">fullscreen_button</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="youtube">youtube</string>
    <string name="instagram">instagram</string>
    <string name="site">site</string>
    <string name="more">more</string>
    <string name="tfs">TFS</string>
    <string name="asos">ASOS</string>
    <string name="castro">Castro</string>
    <string name="hoodies">Hoodies</string>
    <string name="renuar">Renuar</string>
    <string name="terminal_x">Terminal X</string>
    <string name="aldo">Aldo</string>
    <string name="Sale">Sale</string>
    <string name="all">All</string>
    <string name="welcome">Welcome to</string>
    <string name="tooki">tooki</string>
    <string name="check_it_now">Check it Now</string>
    <string name="filter_by">Filter:</string>
    <string name="sort_by">Sort:</string>
    <string name="sub_cat">Sub Category:</string>
    <string name="channel_name">channel_test</string>
    <string name="channel_description">testing</string>
    <string name="powered_by_eitan_goren">Developed by Eitan Goren</string>
    <string name="city">City</string>
    <string name="home">Home</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="submit">SUBMIT</string>
    <string name="shein">Shein</string>
    <string name="castro_new">castro new</string>
    <string name="aldo_new">aldo new</string>
    <string name="swipe">Swipe</string>
    <string name="favorites">Favorites</string>
    <string name="all_items">All items</string>
    <string name="match">Match</string>
    <string name="price">Price</string>
    <string name="company">Company</string>
    <string name="brand">Brand</string>
    <string name="user_name">User Name</string>
    <string name="visit">VISIT</string>
    <string name="search">Search</string>
    <string name="cover_picture">cover picture</string>
    <string name="company_logo">company logo</string>
    <string name="user_picture" />
    <string name="user_picture_">User Picture</string>
    <string name="users_choice">users choice</string>
    <string name="x">X</string>
    <string name="make_shopping_great_again">Make Shopping Great Again!</string>
    <string name="version">" Version 2.1.0 "</string>
    <string name="scroll_to_bottom">scroll_to_bottom</string>
    <string name="scroll_to_top">scroll_to_top</string>
    <string name="remove_from_favorites">Remove From Favorites?</string>
    <string name="dismiss">Dismiss</string>
    <string name="remove">Remove</string>
    <string name="check_sign">check sign</string>
    <string name="this_operation_is_irreversible">This operation is irreversible</string>
    <string name="removed_successfully">Removed Successfully</string>
    <string name="dark_mode">Dark mode</string>
    <string name="Theme">Theme</string>
    <string name="rating">Rating</string>
    <string name="please_rate_us">Rate The App</string>
    <string name="help_improve_the_app">Help improve the app</string>
    <string name="tell_me_what_you_think">Tell me what you think…</string>
    <string name="message_sent">Got It! Thank you</string>
    <string name="copyrights">Copyright</string>
    <string name="lost_connection">Oops! \n It seems like we lost connection</string>
    <string name="try_again">Try Again</string>
    <string name="no_connection">no_connection</string>
</resources>
