<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_swipe"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:icon="@drawable/ic_outline_swipe_24"
        android:tag="swipe"
        android:title="@string/swipe"/>

    <item
        android:id="@+id/bottom_favorites"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:icon="@drawable/ic_outline_favorite_border_24"
        android:tag="favorites"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/bottom_something"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:icon="@drawable/ic_outline_fiber_new_24"
        android:tag="new"
        android:title="new"/>

    <item
        android:id="@+id/bottom_search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:icon="@drawable/ic_baseline_shopping_basket_24"
        android:tag="search"
        android:title="@string/all_items"/>
</menu>