...
                android:layout_marginEnd="25dp"
                android:layout_gravity="center_vertical"

                android:src="@drawable/fb" />

            <androidx.cardview.widget.CardView
                android:id="@+id/facebook_card"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:gravity="center"
                android:translationZ="2dp"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/facebook_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/comfortaa"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
...
